# preprocessor

./: .gitignore  CLAUDE.md  EVAL.md  README.md  main.py  pyproject.toml
.github/workflows/: docs.yml
build-script/: doc-parser-build.config  doc-parser-build.sh
docs/: api.rst  architecture.rst  conf.py  custom_chunker.rst  custom_file_handling.rst  custom_loader.rst  custom_metadata.rst  custom_post_enrich.rst  custom_postprocess.rst  custom_pre_enrich.rst  custom_preprocess.rst  custom_preprocessor.rst  facade_chunking.rst  facade_file_handling.rst  facade_loader.rst  facade_loader_docx.rst  facade_loader_html.rst  facade_loader_hwpx.rst  facade_loader_pdf.rst  facade_metadata.rst  facade_post_enrich.rst  facade_postprocess.rst  facade_pre_enrich.rst  facade_preprocess.rst  facade_usage.rst  getting_started.rst  index.rst
facade/: base_processor.py  custom_preprocessor.py  preprocessor.py
facade/chunker/: __init__.py  base_chunker.py  hierarchical_chunker.py  hybrid_chunker.py  smart_chunker.py
facade/converter/: __init__.py  libreoffice.py  rhwp.py
facade/loader/: __init__.py  base_loader.py  image_loader.py
facade/metadata/: __init__.py  genos.py  test.py
facade/resource/: README.md  bs4.py  config.yaml  detr.yaml  dots_mocr.yaml  dots_mocr_all.yaml  dots_mocr_auto.yaml  dots_mocr_grounding.yaml  paddle.yaml  tableformer.yaml
facade/util/: detr_layout.py  dots_mocr_all_layout.py  dots_mocr_auto_layout.py  dots_mocr_client.py  dots_mocr_layout.py  (+11 more)
result/: README.md
tests/: conftest.py
tools/: adapt_docparser_output.py  visualize_chunks.py
(+56 files in other folders)
