[project]
name = "doc-parser-preprocessor"
version = "0.0.1"
description = "GenOS 문서 전처리기"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pypdf>=6.0",
    "pyyaml>=6.0",
    "pymupdf>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m \"not update_baseline\""
markers = [
    "unit: 격리된 함수/클래스 단위 테스트, 네트워크/파일 의존 없음",
    "integration: 로컬 통합 테스트 - 실제 detr/paddle 파드와 샘플 파일 필요, 없으면 자동 skip",
    "regression: baseline과 비교해 회귀를 감지하는 테스트, 로컬 detr/paddle 파드 필요",
    "update_baseline: baseline 데이터를 (재)생성하는 유틸리티, 일반 실행(pytest)에서는 제외됨",
]
